fix: header overlapping scrollbar (ios)

--- a/src/static/scss/components/_header.scss
+++ b/src/static/scss/components/_header.scss
@@ -7,6 +7,8 @@
   background-color: var(--color-background);
   justify-content: space-between;
   border-bottom: 1px solid var(--color-highlight);
+  transform: translateZ(0);
+  backface-visibility: hidden;
 
   a {
     text-decoration: none;
